# TER

./: .clang-format  CMakeLists.txt  README.md  pn2HDA.cpp  pn2MAXHDA.cpp
hda2csg/: README  corrected_wodes.pnml  corrected_wodes_hda.txt  corrected_wodes_io.txt  corrected_wodes_pn.txt  hda2csg.py  hda2csg2.py  hda_example.txt  pn_example.txt  wodes_example.pnml  wodes_hda.txt  wodes_io.txt  wodes_pn.txt
hda2csg/example/: io_example.txt  wodes_io.txt
hdacontroller/: hdacontroller.py
hdacontroller/example/: corrected_wodes.pnml  corrected_wodes_io.txt  io_example.txt  wodes_example.pnml  wodes_io.txt
helpers/: plot_statistics.py  runabx.py  show_pHDA.py
include/: bimap.h  convmaxhda.h  pn.h  pnhda.h  standardmaxhda.h  utils.h
pnml_files/basic/: ab.pnml  ab_squared.pnml  abcd_squared.pnml  abx.pnml  abx_par.pnml  abx_squared.pnml
pnml_files/examples_paper_pn25/: example_10.pnml  example_11.pnml  example_16.pnml  example_8.pnml  example_9.pnml  fig_14.pnml  fig_3and4.pnml
pnml_files/examples_paper_pn25/further_examples/: ex_weight_busy.pnml  example0.pnml  example3.pnml  example3_mod.pnml  example4.pnml  example5.pnml  example6.pnml  example7.pnml  example_0.pnml  example_10.pnml  running_out.pnml  simple-example-i2.pnml  simple-example-longer.pnml  simple_w.pnml  simple_w_in.pnml  simple_w_in_0.pnml  simple_w_in_1.pnml
pnml_files/mcc/AirplaneLD/: AirplaneLD-pt-0020.pnml
pnml_files/mcc/anderson/: anderson_02.pnml  anderson_03.pnml  anderson_04.pnml
pnml_files/mcc/sudoku/: Sudoku-PT-A-N01.pnml  Sudoku-PT-A-N02.pnml  Sudoku-PT-A-N03.pnml
